@@ -29,6 +29,10 @@
        and deselect files/folders from reverting. (Stefan)
 - ADD: Sortable columns in the "check for updates" 
        dialog. (Stefan)
+- ADD: The default proxy settings from the IE are used
+       automatically. (Stefan)
+- ADD: Command to show the properties in the repository
+       browser. (Stefan)
 - CHG: Searching in the log dialog now also searches
        the changed paths. (Stefan)
 - CHG: The locatorbar in TME shows the current view range
